# reddit-wallpaper-fetcher

./: .gitignore  Cargo.toml  README.md  README.org  go.mod  main.go  main.sh  reddit-wallpaper-fetcher  reddit-wallpaper-fetcher.conf
src/: main.rs
