[package]
name = "wallpaper-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
hyper-tls = "0.5.0"
reqwest = { version = "0.11", default-feature = false, features = ["json", "rustls-tls"] }
serde_json = "1"
whoami = "1"
curl = "0.4.38"